--- a/log4netDemo/log4netDemo/log4netDemo.csproj
+++ b/log4netDemo/log4netDemo/log4netDemo.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{5F0BBD0B-43C6-4313-A61E-81A478B9AC1F}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>log4netDemo</RootNamespace>
-    <AssemblyName>log4netDemo</AssemblyName>
+    <RootNamespace>Log4netDemo</RootNamespace>
+    <AssemblyName>Log4netDemo</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
