--- a/IdentityServer3Demo/IdentityServer/IdentityServer.csproj
+++ b/IdentityServer3Demo/IdentityServer/IdentityServer.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scopes.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Users.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
